methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:4: error: not found: value rien
  val x=rien
        ^SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
  while (biscuit==0){
  ^